--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
-/.pnp
+node_modules
+.pnp
 .pnp.*
 .yarn/*
 !.yarn/patches
@@ -11,18 +11,14 @@
 !.yarn/versions
 
 # testing
-/coverage
+coverage
 
 # next.js
-/.next/
-/out/
+.next/
+out/
 
 # production
 /build
-
-# misc
-.DS_Store
-*.pem
 
 # debug
 npm-debug.log*
@@ -39,3 +35,80 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+
+
+# IDE and editors
+.vscode/
+.idea/
+*.swp
+*.swo
+.vim/
+.emacs.d/
+
+# OS
+.DS_Store
+.DS_Store?
+._*
+Thumbs.db
+
+# Misc 
+*.pem
+
+
+
+# fastapi
+
+# FastAPI specific
+app.log
+.env
+.env.local
+.env.test
+
+# Async and concurrency
+*.asyncio
+async_test.db
+
+# Auto-generated documentation
+docs/build/
+openapi.json
+redoc-static.html
+
+# Virtual environment
+venv/
+.venv/
+ENV/
+env/
+.conda/
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+build/
+dist/
+*.egg-info/
+
+# Testing
+.pytest_cache/
+.coverage
+.coverage.*
+htmlcov/
+.tox/
+.nox/
+test_*.db
+test_results/
+coverage.xml
+pytest.xml
+
+# Database
+*.db
+*.sqlite3
+test.sqlite3
+
+# Logs
+*.log
+app.log
+uvicorn.log
+debug.log
