--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -1,3 +1,4 @@
+alembic==1.18.4
 annotated-doc==0.0.4
 annotated-types==0.7.0
 anyio==4.12.1
@@ -6,13 +7,19 @@ cffi==2.0.0
 click==8.3.1
 cryptography==46.0.5
 fastapi==0.128.4
+greenlet==3.3.2
 h11==0.16.0
 idna==3.11
+Mako==1.3.10
+MarkupSafe==3.0.3
+psycopg==3.3.3
+psycopg-binary==3.3.3
 pycparser==3.0
 pydantic==2.12.5
 pydantic_core==2.41.5
 python-dotenv==1.2.1
 python-multipart==0.0.22
+SQLAlchemy==2.0.46
 starlette==0.52.1
 typing-inspection==0.4.2
 typing_extensions==4.15.0
