--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,8 @@ services:
       - ./api:/app
     env_file:
       - ./api/.env
+    depends_on:
+      - db
 
   web:
     build:
@@ -24,5 +26,18 @@ services:
     env_file:
       - ./web/.env.docker
 
+  db:
+    image: postgres:16
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: password
+      POSTGRES_DB: app
+    ports:
+      - "5432:5432"
+    volumes:
+      - db_data:/var/lib/postgresql/data
+
 volumes:
   web_node_modules:
+  db_data:
+
